Add missing role to playbook

--- a/local.yml
+++ b/local.yml
@@ -64,6 +64,7 @@
     - role: neovim
     - role: nodejs
     - role: pipx
+    - role: ripgrep
     - role: starship
     - role: tmux
     - role: update
