Install starship to nushell

--- a/roles/starship/tasks/main.yml
+++ b/roles/starship/tasks/main.yml
@@ -15,3 +15,8 @@
     src: prompt.bash
     dest: "{{ ansible_env.HOME }}/.config/bash/prompt.bash"
 
+- name: Add nushell config
+  ansible.builtin.copy:
+    src: starship.nu
+    dest: "{{ ansible_env.HOME }}/.config/nushell/autoload/starship.nu"
+
