--- a/roles/zoxide/tasks/main.yml
+++ b/roles/zoxide/tasks/main.yml
@@ -9,3 +9,8 @@
     src: zoxide.bash
     dest: "{{ ansible_env.HOME }}/.config/bash/zoxide.bash"
 
+- name: Add nushell config
+  ansible.builtin.copy:
+    src: zoxide.nu
+    dest: "{{ ansible_env.HOME }}/.config/nushell/autoload/zoxide.nu"
+
