--- a/roles/bash/tasks/main.yml
+++ b/roles/bash/tasks/main.yml
@@ -2,7 +2,7 @@
   ansible.builtin.git:
     repo: "{{ github_prefix }}ll-nick/bash-config"
     dest: "{{ ansible_env.HOME }}/.config/bash"
-    force: "true"
+  ignore_errors: true
 
 - name: Create bashrc symlink
   ansible.builtin.file:
