--- a/roles/kitty/tasks/main.yml
+++ b/roles/kitty/tasks/main.yml
@@ -42,5 +42,5 @@
   ansible.builtin.git:
     repo: "{{ github_prefix }}ll-nick/kitty-config.git"
     dest: "{{ ansible_env.HOME }}/.config/kitty"
-    force: "true"
+  ignore_errors: true
 
