--- a/roles/leadr/tasks/main.yml
+++ b/roles/leadr/tasks/main.yml
@@ -13,5 +13,5 @@
   ansible.builtin.git:
     repo: "{{ github_prefix }}ll-nick/leadr-config"
     dest: "{{ ansible_env.HOME }}/.config/leadr"
-    force: "true"
+  ignore_errors: true
 
