--- a/roles/neovim/tasks/main.yml
+++ b/roles/neovim/tasks/main.yml
@@ -33,7 +33,7 @@
   ansible.builtin.git:
     repo: "{{ github_prefix }}ll-nick/neovim-config.git"
     dest: "{{ ansible_env.HOME }}/.config/nvim"
-    force: "true"
+  ignore_errors: true
 
 - name: Add bash config
   ansible.builtin.copy:
