--- a/roles/nushell/tasks/main.yml
+++ b/roles/nushell/tasks/main.yml
@@ -8,4 +8,4 @@
   ansible.builtin.git:
     repo: "{{ github_prefix }}ll-nick/nushell-config"
     dest: "{{ ansible_env.HOME }}/.config/nushell"
-    force: "true"
+  ignore_errors: true
