--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -18,7 +18,7 @@
   ansible.builtin.git:
     repo: "{{ github_prefix }}ll-nick/tmux-config.git"
     dest: "{{ ansible_env.HOME }}/.config/tmux"
-    force: "true"
+  ignore_errors: true
   register: tmux_config
 
 - name: Clone TPM
