--- a/roles/leadr/tasks/main.yml
+++ b/roles/leadr/tasks/main.yml
@@ -19,6 +19,7 @@
   ansible.builtin.command:
     cmd: mise exec ubi:ll-nick/leadr -- leadr --nu
   register: leadr_init
+  changed_when: false
 
 - name: Write init file
   ansible.builtin.copy:
