--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -8,11 +8,9 @@
 
 - name: Install
   ansible.builtin.shell: |
-    {{ ansible_env.HOME }}/.local/bin/mise use --global ubi:pythops/tmux-linux-binary[rename_exe=tmux]
+    {{ ansible_env.HOME }}/.local/bin/mise use --global ubi:ll-nick/tmux-releases[rename_exe=tmux]
   args:
-    creates: "{{ ansible_env.HOME }}/.local/share/mise/installs/ubi-pythops-tmux-linux-binary"
-  # Due to glibc issues, tmux is best installed via nixpkgs on NixOS
-  when: ansible_distribution != "NixOS"
+    creates: "{{ ansible_env.HOME }}/.local/share/mise/installs/ubi-ll-nick-tmux-releases"
 
 - name: Clone Config
   ansible.builtin.git:
