Use delta pager in lazygit

--- a/roles/lazygit/files/config.yml
+++ b/roles/lazygit/files/config.yml
@@ -2,3 +2,6 @@ keybinding:
   commits:
     moveDownCommit: <c-d>
     moveUpCommit: <c-u>
+git:
+  pagers:
+    - pager: delta --dark --paging=never
