--- a/roles/tmux/files/tmux.service
+++ b/roles/tmux/files/tmux.service
@@ -8,10 +8,10 @@ Type=forking
 Restart=no
 RemainAfterExit=yes
 
-ExecStop=bash -c "sed -i 's,/tmp.*nvim,nvim,' ~/.local/share/tmux/resurrect/last"
 ExecStart=bash -l -c "mise x -- tmux new-session -d -s restore '~/.config/tmux/plugins/tmux-resurrect/scripts/restore.sh'"
 
 ExecStop=bash -l -c "mise x -- ~/.config/tmux/plugins/tmux-resurrect/scripts/save.sh"
+ExecStop=bash -c "sed -i 's,/home/.*nvim,nvim,' ~/.local/share/tmux/resurrect/last"
 ExecStop=bash -l -c "mise x -- tmux kill-server"
 KillMode=control-group
 
