--- a/roles/gnome/tasks/main.yml
+++ b/roles/gnome/tasks/main.yml
@@ -75,16 +75,32 @@
     key: "/org/gnome/desktop/interface/cursor-theme"
     value: "'catppuccin-mocha-blue-cursors'"
 
-# Wallpaper
+- name: Ensure Picture Directory
+  ansible.builtin.file:
+    path: "{{ ansible_env.HOME }}/Pictures"
+    state: directory
+
+- name: Download Light Mode Wallpaper
+  ansible.builtin.get_url:
+    url: "https://github.com/ll-nick/ansible-config/blob/main/roles/gnome/files/wallpaper-light.png?raw=true"
+    dest: "{{ ansible_env.HOME }}/Pictures/wallpaper-light.png"
+    checksum: sha256:4e6924667214a986274a61f84b8b202f776d758d51dfbc256fe9ab4954e66e9a
+
+- name: Download Dark Mode Wallpaper
+  ansible.builtin.get_url:
+    url: "https://github.com/ll-nick/ansible-config/blob/main/roles/gnome/files/wallpaper-dark.png?raw=true"
+    dest: "{{ ansible_env.HOME }}/Pictures/wallpaper-dark.png"
+    checksum: sha256:1199a43751f1234d3fb92ecf614fbf34de2c07334d3fdd355891044f51bddada
+
+- name: Set Wallpaper
+  community.general.dconf:
+    key: "/org/gnome/desktop/background/picture-uri"
+    value: "'file:///{{ ansible_env.HOME }}/Pictures/wallpaper-light.png'"
+
 - name: Set Dark Mode Wallpaper
   community.general.dconf:
     key: "/org/gnome/desktop/background/picture-uri-dark"
-    value: "'https://github.com/ll-nick/ansible-config/blob/main/roles/gnome/files/wallpaper-dark.png?raw=true'"
-
-- name: Set Light Mode Wallpaper
-  community.general.dconf:
-    key: "/org/gnome/desktop/background/picture-uri"
-    value: "'https://github.com/ll-nick/ansible-config/blob/main/roles/gnome/files/wallpaper-light.png?raw=true'"
+    value: "'file:///{{ ansible_env.HOME }}/Pictures/wallpaper-dark.png'"
 
 # PaperWM
 - name: Install GNOME Extension CLI
