--- a/roles/nushell/tasks/main.yml
+++ b/roles/nushell/tasks/main.yml
@@ -33,3 +33,14 @@
     content: "{{ carapace_init.stdout }}"
     mode: "0644"
 
+- name: Generate mise init script
+  ansible.builtin.command:
+    cmd: mise activate nu
+  register: mise_init
+  changed_when: false
+
+- name: Write mise init file
+  ansible.builtin.copy:
+    dest: "{{ ansible_env.HOME }}/.local/share/nushell/vendor/autoload/00_mise.nu"
+    content: "{{ mise_init.stdout }}"
+    mode: "0644"
