--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -8,9 +8,9 @@
 
 - name: Install
   ansible.builtin.shell: |
-    {{ ansible_env.HOME }}/.local/bin/mise use --global github:tmux/tmux-builds
+    {{ ansible_env.HOME }}/.local/bin/mise use --global tmux
   args:
-    creates: "{{ ansible_env.HOME }}/.local/share/mise/installs/github-tmux-tmux-builds"
+    creates: "{{ ansible_env.HOME }}/.local/share/mise/installs/tmux"
 
 - name: Clone Config
   ansible.builtin.git:
